--- a/Sources/Nested/typesystem.tex
+++ b/Sources/Nested/typesystem.tex
@@ -95,7 +95,7 @@ sufficient.
 
 
 \paragraph{Properties of Subtyping.}
-The subtyping relation is vacuously \textit{reflexive} and \textit{transitive}.
+The subtyping relation is vacuously \emph{reflexive} and \emph{transitive}.
 
 
 
@@ -193,7 +193,7 @@ translating source contexts $[[GG]]$ to target contexts $[[gg]]$.
 
 \subsection{Explicit Coercions and Coercive Subtyping}
 
-The separate syntactic category for \textit{explicit coercions} is a distinctive difference
+The separate syntactic category for \emph{explicit coercions} is a distinctive difference
 from the prior works (in which they are regular terms). Our coercions are based
 on those of \citet{Henglein_1994}, and we add more forms due to our extra
 subtyping rules.
@@ -357,7 +357,7 @@ subtype of both $[[A1]]$ and $[[A2]]$, instead of the more general form $[[ A1 &
 
 Another notable difference from the coercive subtyping of \oname is that,
 because of their syntactic proof method, they have special treatment for
-coercions of \textit{top-like types} (see the coercion parts in
+coercions of \emph{top-like types} (see the coercion parts in
 \rref{Si-andL,Si-andR} in \cref{fig:lambdai}). Top types will introduce
 non-determinism during subtyping, thus would potentially endanger coherence.
 However, as \citet{oliveira2016disjoint} observed, any coercions for top-like
