--- a/Sources/Poly/overview.tex
+++ b/Sources/Poly/overview.tex
@@ -32,10 +32,10 @@ type variables is needed.
 
 Motivated by the above two points, \citet{alpuimdisjoint} proposed disjoint
 polymorphism, a variant of parametric polymorphism. The main novelty is
-\textit{disjoint (universal) quantification} of the form $[[ \ X ** A . B ]]$.
+\emph{disjoint (universal) quantification} of the form $[[ \ X ** A . B ]]$.
 Inspired by bounded quantification~\citep{cardelli1994extension} where a type
 variable is constrained by a type bound, disjoint quantification allows type
-variables to be associated with \textit{disjointness constraints}.
+variables to be associated with \emph{disjointness constraints}.
 Correspondingly, a term construct of the form $[[ \ X ** A. ee ]]$ is used to
 create values of disjoint quantification. We have seen some examples of disjoint
 polymorphism at work in \cref{bg:sec:disjoint_poly}. With disjointness constraints
