--- a/Sources/Traits.tex
+++ b/Sources/Traits.tex
@@ -6,7 +6,7 @@
 
 In this chapter and \cref{chap:case_study}, we present two applications of
 \fnamee. This chapter is primarily concerned with building a source-level language called
-\sedel that features \textit{typed first-class traits} and \textit{nested composition} among others.
+\sedel that features \emph{typed first-class traits} and \emph{nested composition} among others.
 We show how to model source-level constructs for first-class traits and dynamic
 inheritance, supporting standard object-oriented features such as dynamic
 dispatching and abstract methods. It is remarkable that all of these can be
