--- a/Sources/Traits/traits.tex
+++ b/Sources/Traits/traits.tex
@@ -27,7 +27,7 @@ with traditional trait models, there are three interesting points about
 \end{inparaenum}
 The support for such combination of features is one of the key novelties of \sedel.
 Another minor difference from traditional traits (e.g., in Scala) is that,
-due to the use of structural types, a trait name is \textit{not} a type.
+due to the use of structural types, a trait name is \emph{not} a type.
 
 \subsection{Two Roles of Traits in \sedel}
 
