--- a/Sources/Abstract.tex
+++ b/Sources/Abstract.tex
@@ -1,8 +1,10 @@
-
+%
+\noindent
+%
 Programs are hard to write. It was so 50 years ago at the time of the so-called
 software crisis; it still remains so nowadays. Over the years, we have
 learned---the hard way---that software should be constructed in a
-\textit{modular} way, i.e., as a network of smaller and loosely connected
+\emph{modular} way, i.e., as a network of smaller and loosely connected
 modules. To facilitate writing modular code, researchers and software
 practitioners have developed new methodologies; new programming paradigms;
 stronger type systems; as well as better tooling support. Still, this is not
@@ -11,13 +13,13 @@ of satisfactory solutions, but one that is constantly pointed out is the
 inadequacy of existing programming languages for the construction of
 modular software.
 
-This thesis investigates \textit{disjoint intersection types}, a variant of
+This thesis investigates \emph{disjoint intersection types}, a variant of
 intersection types. Disjoint intersections types have great potential to serve
 as a foundation for powerful, flexible and yet type-safe and easy to reason OO
 languages, suitable for writing modular software. On the theoretical side, this
 thesis shows how to significantly increase the expressiveness of disjoint
-intersection types by adding support for \textit{nested composition}, along with
-\textit{parametric polymorphism}. Nested composition extends inheritance to work
+intersection types by adding support for \emph{nested composition}, along with
+\emph{parametric polymorphism}. Nested composition extends inheritance to work
 on a whole family of classes, enabling high degrees of modularity and code
 reuse. The combination with parametric polymorphism further improves the
 state-of-art encodings of extensible designs. However, the extension with nested
@@ -32,10 +34,10 @@ coherence. Hence, this thesis puts disjoint intersection types on a solid
 footing by thoroughly exploring their meta-theoretical properties.
 
 On the pragmatic side, this thesis proposes a new language design with support
-for \textit{first-class traits}, \textit{dynamic inheritance} and nested
+for \emph{first-class traits}, \emph{dynamic inheritance} and nested
 composition. First-class traits allow two objects of statically unknown types
 to be composed without conflicts. Dynamic inheritance allows a class to inherit
-from other classes at \textit{run time}. To address the challenges of typing
+from other classes at \emph{run time}. To address the challenges of typing
 first-class traits and detecting conflicts statically, this thesis shows how to
 model source language constructs for first-class traits and dynamic inheritance
 by leveraging the fine-grained expressiveness of disjoint intersection types. To
@@ -57,3 +59,11 @@ extensibility.
 \begin{center}
 \textbf{An abstract of exactly 500 words}
 \end{center}
+
+\newpage
+
+\begin{flushright}
+  \null\vspace{\stretch{1}}
+  \textit{Dedicated to my beloved parents}
+  \vspace{\stretch{2}}\null
+\end{flushright}
